<resources>
    <string name="app_name">MHPP Attendance</string>
    <string name="title_activity_welcome">Login/Signup</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome TO Your Attendance App</string>
    <string name="slide_1_title2">Lets Get Started!!!</string>
    <string name="slide_1_desc"></string>

    <string name="slide_2_title">Mark Your Attendance Virtually</string>
    <string name="slide_2_desc"></string>

    <string name="slide_3_title">At Any Location</string>
    <string name="slide_3_desc"></string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="username_hint">Username</string>
    <string name="username_id_hint">Email id/Employee id</string>

    <string name="password_hint">Password</string>
    <string name="con_password_hint"> Confirm Password</string>

    <string name="login_hint">Login</string>

    <string name="empty_fields">Some fields are empty</string>
    <string name="json_error">Error in receiving json</string>
    <string name="load">Loading</string>

    <string name="email">E-mail id</string>
    <string name="empid">Employee id</string>
    <string name="contact">Enter Contact</string>

    <string name="photo">Upload Photo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="emp_id">Enter Employee Aadhar ID</string>
    <string name="nav_dash">Dashboard</string>
    <string name="nav_punch">Punch In/Out</string>
    <string name="nav_myattd">My Attendance</string>
    <string name="nav_markta">Mark Team Attendance</string>
    <string name="nav_teamattd">Team Attendance</string>
    <string name="nav_levreq">Leave Request</string>
    <string name="nav_support">Support</string>
    <string name="nav_altm">Alter Member</string>
    <string name="nav_coninf">Contact Information</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="toolbar_p">Punch In/Out</string>
    <string name="punin">Punch In</string>
    <string name="punout">Punch Out</string>
    <string name="show">Show Attendance</string>
    <string name="emp_name">Enter Employee Name</string>
    <string name="nav_proja">Project Assignment</string>
    <string name="nav_userman">User Manual</string>
    <string name="nav_la">Leave Approval</string>
    <string name="no_desc">No reason provided</string>
    <string name="prj_name">Project Name</string>
    <string name="location">Location</string>
    <string name="add_prj">Add Project</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="export">Export</string>
    <string name="contactno">Contact Number</string>

</resources>